--- a/AssetPipe/EAE3010SRassign01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AssetPipe/EAE3010SRassign01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -247,6 +247,14 @@ MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
 MaterialExpressionConstant2Vector.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -266,11 +274,11 @@ MRUItem6=/Game/WB_Materials/WB_sidewalk
 MRUItem7=/Game/WB_Materials/WB_street
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/WB_Materials/WB_water.WB_water;
 RecentlyPlaced=/Game/WB_Materials/WB_Wood_basic.WB_Wood_basic;
 RecentlyPlaced=/Game/WB_Materials/Pillar.Pillar;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/WB_Materials/WB_sidewalk.WB_sidewalk;
 RecentlyPlaced=/Game/WB_Materials/WB_street.WB_street;
 RecentlyPlaced=/Game/WB_Materials/WB_water2.WB_water2;
