--- a/AssetPipe/EAE3010SRassign01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AssetPipe/EAE3010SRassign01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,9 +145,6 @@ LastLevel=/Game/blockmap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/WB_Materials/WB_water.WB_water
-OpenAssetsAtExit=/Game/WB_Materials/WB_water2.WB_water2
-OpenAssetsAtExit=/Game/WB_Materials/WB_Wood_basic.WB_Wood_basic
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -259,10 +256,10 @@ GeomModifier="\"Object.Settings\" "
 Object=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/WB_Materials/WB_Wood_basic
+MRUItem0=/Game/blockmap
 MRUItem1=/Game/WB_Materials/WB_water2
-MRUItem2=/Game/WB_Materials/WB_water
-MRUItem3=/Game/blockmap
+MRUItem2=/Game/WB_Materials/WB_Wood_basic
+MRUItem3=/Game/WB_Materials/WB_water
 MRUItem4=/Game/WB_Materials/Pillar
 MRUItem5=/Game/WB_Materials/WB_grass
 MRUItem6=/Game/WB_Materials/WB_sidewalk
@@ -270,14 +267,14 @@ MRUItem7=/Game/WB_Materials/WB_street
 
 [PlacementMode]
 RecentlyPlaced=/Game/WB_Materials/WB_Wood_basic.WB_Wood_basic;
-RecentlyPlaced=/Game/WB_Materials/Pillar.Pillar;
+RecentlyPlaced=/Game/WB_Materials/WB_water2.WB_water2;
+RecentlyPlaced=/Game/WB_Materials/WB_water.WB_water;
+RecentlyPlaced=/Game/WB_Materials/WB_grass.WB_grass;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/WB_Materials/Pillar.Pillar;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/WB_Materials/WB_sidewalk.WB_sidewalk;
 RecentlyPlaced=/Game/WB_Materials/WB_street.WB_street;
-RecentlyPlaced=/Game/WB_Materials/WB_water.WB_water;
-RecentlyPlaced=/Game/WB_Materials/WB_water2.WB_water2;
-RecentlyPlaced=/Game/WB_Materials/WB_grass.WB_grass;
 RecentlyPlaced=/Game/mann.mann;
 
 [ContentBrowser]
@@ -309,6 +306,7 @@ ContentBrowserTab1.CurrentViewType=1
 /Game/WB_Materials/WB_sidewalk.WB_sidewalk=1
 /Game/WB_Materials/WB_grass.WB_grass=1
 /Game/WB_Materials/Pillar.Pillar=1
+/Game/WB_Materials/WB_water2.WB_water2=1
 
 [MaterialEditor]
 PrimType=1
